# IGVC_BEV

./: .gitignore  README.md
avl_bev_perception/: README.md  package.xml
avl_bev_perception/avl_bev_perception/: bev_perception_node.py  seg_inference.py
avl_bev_perception/config/: bev_config.yaml
avl_bev_perception/docs/: CHANGELOG_AND_DESIGN_v3.docx
avl_bev_perception_v3_2/avl_bev_perception/: README.md  setup.cfg  setup.py
avl_bev_perception_v3_2/avl_bev_perception/avl_bev_perception/: bev_perception_node.py  seg_inference.py
avl_bev_perception_v3_2/avl_bev_perception/config/: bev_config.yaml
avl_bev_perception_v3_2/avl_bev_perception/tools/: calibrate_hsv.py
chris_comp/: CLAUDE.md  KIWICAMPUS_DEBUG.md  LICENSE  PROPOSAL_FOR_PARSA.md  README.md  TODO.md  handoff.md
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/: README.md  package.xml  setup.py
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/avl_bev_perception/: auto_calibrate.py  bev_perception_node.py  seg_inference.py
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/config/: bev_config.yaml
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/docs/: CHANGELOG_AND_DESIGN_v3.2.docx
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/launch/: bev_perception.launch.py  tf_static.launch.py  vision_test.launch.py  zed_cameras.launch.py
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/rviz/: bev_perception.rviz
chris_comp/avl_bev_perception_v3_2/avl_bev_perception/tools/: calibrate_hsv.py  record_session.sh
chris_comp/cv_lane_core/: .gitignore  ARCHITECTURE.md  CODE_GUIDE.md  CV_CORE_REVIEW.md  ISSUES.md  README.md  TODO.md
chris_comp/cv_lane_core/adapters/: README.md  __init__.py  ros2_zed.py  usb_cam.py
chris_comp/cv_lane_core/configs/: bright_concrete.yaml  default.yaml  example_other_car.yaml  vehicle_example.yaml
chris_comp/cv_lane_core/lane_cv/: __init__.py  bev.py  classes.py  config.py  line_filter.py  pipeline.py  providers.py  rig.py  rig_config.py  segmentation.py
chris_comp/cv_lane_core/sim/: __init__.py  metrics.py  scene.py
chris_comp/cv_lane_core/tests/: check.py
chris_comp/cv_lane_core/tools/: run.py  tune.py
