<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avl_bev_perception</name>
  <version>3.2.2</version>
  <description>
    IGVC AutoNav 3-camera ZED X Bird's Eye View perception with hybrid
    HSV + ONNX semantic segmentation. Decoupled perception/visualization
    timers for full-speed operation.
  </description>
  <maintainer email="avl@example.com">AVL Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- Only used when kiwicampus.enabled (per-camera adapter publishes
       vision_msgs/LabelInfo). Safe to leave declared even in standalone
       mode — the import is lazy and gated by the param. -->
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
